--- a/k8s/templates/shared/secrets.yaml
+++ b/k8s/templates/shared/secrets.yaml
@@ -18,9 +18,9 @@ data:
   
   auth-database-url: {{ printf "postgresql://%s:%s@%s:%d/%s?sslmode=%s" $username $password $host ($port | int) .Values.externalDatabase.databases.auth $sslMode | b64enc }}
   user-database-url: {{ printf "postgresql://%s:%s@%s:%d/%s?sslmode=%s" $username $password $host ($port | int) .Values.externalDatabase.databases.user $sslMode | b64enc }}
-  {{- if .Values.externalDatabase.databases.campaign }}
-  # campaign-database-url: {{ printf "postgresql://%s:%s@%s:%d/%s?sslmode=%s" $username $password $host ($port | int) .Values.externalDatabase.databases.campaign $sslMode | b64enc }}
-  # {{- end }}
+  {{- if .Values.campaign.enabled }}
+  campaign-database-url: {{ printf "postgresql://%s:%s@%s:%d/%s?sslmode=%s" $username $password $host ($port | int) .Values.externalDatabase.databases.campaign $sslMode | b64enc }}
+  {{- end }}
   
   # Individual connection components (if needed separately)
   database-host: {{ $host | b64enc }}
