fix: missing aws credentials and init prisma for k8s

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,12 @@ jobs:
             --set externalDatabase.port=${{ secrets.DATABASE_PORT }} \
             --set externalDatabase.username=${{ secrets.DATABASE_USERNAME }} \
             --set externalDatabase.password=${{ secrets.DATABASE_PASSWORD }} \
+            --set aws.region=${{ secrets.AWS_REGION || 'us-east-1' }} \
+            --set aws.cognito.userPoolId=${{ secrets.AWS_COGNITO_USER_POOL_ID || 'mock-user-pool-id' }} \
+            --set aws.cognito.clientId=${{ secrets.AWS_COGNITO_CLIENT_ID || 'mock-client-id' }} \
+            --set aws.cognito.clientSecret=${{ secrets.AWS_COGNITO_CLIENT_SECRET || '' }} \
+            --set aws.accessKeyId=${{ secrets.AWS_ACCESS_KEY_ID || '' }} \
+            --set aws.secretAccessKey=${{ secrets.AWS_SECRET_ACCESS_KEY || '' }} \
             --timeout 5m
           
           # Give pods time to start
