fix: run container service

--- a/.dockerignore
+++ b/.dockerignore
@@ -24,6 +24,7 @@
 # Node.js
 # ================================
 **/node_modules
+!**/node_modules/.prisma
 **/npm-debug.log*
 **/yarn-debug.log*
 **/yarn-error.log*
