--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nest build user"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.14.0"
   }
 }
