--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,49 +7,108 @@ on:
     branches: [main, develop]
 
 jobs:
+  # --- CI (lint + test) ---
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 20
+          cache: npm
       - run: npm ci
       - run: npm run lint
       - run: npm run test
-      - run: npm run build auth
-      - run: npm run build user
-      - run: npm run build graphql-gateway
 
-  docker:
+  # --- Build Docker images (chỉ build nếu có thay đổi) ---
+  docker-auth:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/login-action@v3
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'apps/auth/**'
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/setup-buildx-action@v3
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: apps/auth/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth:cache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth:cache,mode=max
 
-      - name: Set image tag
-        run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      - name: Build & Push Images
-        run: |
-          docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth:$TAG -f apps/auth/Dockerfile . --push
-          docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user:$TAG -f apps/user/Dockerfile . --push
-          docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway:$TAG -f apps/graphql-gateway/Dockerfile . --push
-
-  deploy:
-    needs: docker
+  docker-user:
+    needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'apps/user/**'
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: apps/user/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user:cache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user:cache,mode=max
 
+  docker-gateway:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'apps/graphql-gateway/**'
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - if: steps.changes.outputs.src == 'true'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: apps/graphql-gateway/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway:cache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway:cache,mode=max
+
+  # --- Deploy ---
+  deploy:
+    needs: [docker-auth, docker-user, docker-gateway]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
@@ -61,7 +120,7 @@ jobs:
         with:
           version: v3.15.2
 
-      - name: Set env (namespace, replicas, tag)
+      - name: Set deploy env
         run: |
           if [ "${GITHUB_REF##*/}" = "main" ]; then
             echo "NAMESPACE=foodfund-production" >> $GITHUB_ENV
@@ -70,73 +129,36 @@ jobs:
             echo "NAMESPACE=foodfund-staging" >> $GITHUB_ENV
             echo "REPLICAS=1" >> $GITHUB_ENV
           fi
-          echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
-          # default Helm timeout (can be overridden if needed)
-          echo "HELM_TIMEOUT=10m0s" >> $GITHUB_ENV
+          echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
 
-      - name: Sync DB secret to cluster (create or update)
-        env:
-          DB_HOST: ${{ secrets.DATABASE_HOST }}
-          DB_PORT: ${{ secrets.DATABASE_PORT }}
-          DB_USER: ${{ secrets.DATABASE_USERNAME }}
-          DB_PASS: ${{ secrets.DATABASE_PASSWORD }}
-          USERS_DB_NAME: ${{ secrets.USERS_DATABASE_NAME }}
+      - name: Deploy with Helm
         run: |
           set -euo pipefail
-          # Build USERS_DATABASE_URL from individual secrets if not provided
-          USERS_DB_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${USERS_DB_NAME}?sslmode=require"
-          echo "Applying secret 'foodfund-database-secret' to namespace $NAMESPACE"
-          kubectl create secret generic foodfund-database-secret \
-            --from-literal=DATABASE_HOST="${DB_HOST}" \
-            --from-literal=DATABASE_PORT="${DB_PORT}" \
-            --from-literal=DATABASE_USERNAME="${DB_USER}" \
-            --from-literal=DATABASE_PASSWORD="${DB_PASS}" \
-            --from-literal=USERS_DATABASE_URL="${USERS_DB_URL}" \
-            --dry-run=client -o yaml | kubectl apply -n "$NAMESPACE" -f -
-                  
-      - name: Deploy with Helm (atomic, timeout, debug on failure)
-        env:
-          DOCKER_USER: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_REPO_AUTH: "${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth"
-          DOCKER_REPO_USER: "${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user"
-          DOCKER_REPO_GATEWAY: "${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway"
-        run: |
-          set -euo pipefail
+          for svc in auth user graphql-gateway; do
+            repo="${{ secrets.DOCKERHUB_USERNAME }}/foodfund-$svc"
+            chart="k8s/$svc"
+            release="foodfund-$svc"
 
-          helm_timeout="${HELM_TIMEOUT:-10m0s}"
-
-          deploy() {
-            release="$1"; chart="$2"; image_repo="$3"
-            echo "Deploying $release from $chart (image $image_repo:$TAG)"
+            echo "Deploying $release with image $repo:$TAG"
             if ! helm upgrade --install "$release" "$chart" \
-                --namespace "$NAMESPACE" --create-namespace \
-                --set image.repository="$image_repo" \
-                --set image.tag="$TAG" \
-                --set replicaCount="$REPLICAS" \
-                --wait --timeout "$helm_timeout" --atomic; then
-              echo "--- Helm deploy failed for $release. Gathering diagnostics... ---"
-              echo "== Helm status =="
-              helm status "$release" -n "$NAMESPACE" || true
-              echo "== Helm history =="
-              helm history "$release" -n "$NAMESPACE" || true
-              echo "== Pods in namespace =="
+              --namespace "$NAMESPACE" --create-namespace \
+              --set image.repository="$repo" \
+              --set image.tag="$TAG" \
+              --set replicaCount="$REPLICAS" \
+              --wait --timeout=2m --atomic; then
+              
+              echo "--- Helm failed for $release, debugging ---"
               kubectl get pods -n "$NAMESPACE" -o wide || true
-              echo "== Describe pods (last 30 lines each) =="
-              for p in $(kubectl get pods -n "$NAMESPACE" -o name || true); do
-                echo "--- $p ---";
-                kubectl describe "$p" -n "$NAMESPACE" || true;
+              kubectl describe deployment "$release" -n "$NAMESPACE" || true
+              for p in $(kubectl get pods -n "$NAMESPACE" -l app=$release -o name || true); do
+                echo "--- Logs for $p ---"
+                kubectl logs "$p" -n "$NAMESPACE" --tail=50 || true
               done
-              echo "== Recent events =="
-              kubectl get events -n "$NAMESPACE" --sort-by='.lastTimestamp' || true
               exit 1
             fi
-          }
+          done
 
-          deploy "foodfund-auth" "k8s/auth" "$DOCKER_REPO_AUTH"
-          deploy "foodfund-user" "k8s/user" "$DOCKER_REPO_USER"
-          deploy "foodfund-gateway" "k8s/graphql-gateway" "$DOCKER_REPO_GATEWAY"
-
-      - name: Get status
+      - name: Show cluster status
         run: |
           kubectl get pods -n $NAMESPACE
           kubectl get svc -n $NAMESPACE
