--- a/k8s/user/templates/deployment.yaml
+++ b/k8s/user/templates/deployment.yaml
@@ -45,11 +45,11 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
-            - name: USER_DATABASE_URL
+            - name: USERS_DATABASE_URL
               valueFrom:
                 secretKeyRef:
                   name: foodfund-database-secret
-                  key: USER_DATABASE_URL
+                  key: USERS_DATABASE_URL
             - name: DATABASE_HOST
               valueFrom:
                 secretKeyRef:
